# DotNameCpp

./: .ccls  .clang-format  .clangd  .cmake-format  .gitignore  .python-version  CMakeLists.txt  Doxyfile  LICENSE  README.md  SolutionController.py  SolutionRenamer.py  SolutionUpgrader.py  conanfile.py  conantools.py  flake.nix  shell.nix
.github/workflows/: emscripten.yml  linux-clang.yml  linux-cross-aarch64.yml  linux-cross-mingw.yml  linux.yml  macos.yml  windows.yml
application/src/: Application.cpp
application/tests/: AssetManagerTest.cpp  CMakeLists.txt  FileReaderTest.cpp
assets/: ems-mini.html
cmake/: CPM.cmake  project-application.cmake  project-common.cmake  project-library.cmake  project-standalone.cmake  project-tests.cmake  tmplt-emscripten.cmake  tmplt-sanitizer.cmake  useful-cmake-snippets.md
doc/: LSP-SETUP.md
doc/html/: Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  AssetManagerFactory_8hpp.html  AssetManagerTest_8cpp.html  AssetManager_8hpp_source.html  ConsoleLogger_8hpp.html  CustomStringsLoader_8hpp_source.html  DirectoryManager_8hpp.html  DotNameLib_8hpp.html  DotNameLib_8hpp.js  DotNameLib_8hpp__dep__incl.map  DotNameLib_8hpp__dep__incl.md5  DotNameLib_8hpp__incl.map  DotNameLib_8hpp_source.html  EmscriptenPlatformInfo_8cpp.html  EmscriptenPlatformInfo_8hpp.html  FileReader_8hpp.html  FileReader_8hpp_source.html  FileWriter_8cpp.html  FileWriter_8hpp_source.html  IAssetManager_8hpp__dep__incl.map  IAssetManager_8hpp_source.html  ICustomStringsLoader_8hpp.html  (+185 more)
src/: DotNameLib.cpp  WindowsHeaders.hpp
(+523 files in other folders)
